force-app/main/default/objects/Session__c/Session__c.object-meta.xml
<CustomObject>
    <description>Records individual sessions being run as part of a particular programme offer, e.g. a group  or one-to-one mentoring</description>
    <label>Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>