force-app/main/default/objects/Session__c/fields/AdditionalAttendees__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAttendees__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Used to record the number of girls who have not been referred to Love4Life but turned up at the session</inlineHelpText>
    <label>Additional Attendees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>