force-app/main/default/objects/Session__c/fields/RegisterCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>RegisterCompletedDate__c</fullName>
    <label>Register Completed Date</label>
    <type>Date</type>
</CustomField>