force-app/main/default/objects/Session__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The particular service (e.g. group or workshop) that this session relates to</inlineHelpText>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>