force-app/main/default/objects/Session__c/fields/SessionDateTime__c.field-meta.xml
<CustomField>
    <fullName>SessionDateTime__c</fullName>
    <label>Session Date/Time</label>
    <type>DateTime</type>
</CustomField>