force-app/main/default/objects/Session__c/fields/SessionNotes__c.field-meta.xml
<CustomField>
    <fullName>SessionNotes__c</fullName>
    <label>Session Notes</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>