force-app/main/default/objects/Session__c/fields/SessionType__c.field-meta.xml
<CustomField>
    <fullName>SessionType__c</fullName>
    <formula>TEXT(Service__r.Type__c)</formula>
    <label>Session Type</label>
    <type>Text</type>
</CustomField>