force-app/main/default/objects/Session__c/fields/TotalAttendees__c.field-meta.xml
<CustomField>
    <fullName>TotalAttendees__c</fullName>
    <inlineHelpText>Automatically calculates: the number of attendance records where the status = &apos;Attended&apos;</inlineHelpText>
    <label>Total Invited Attendees</label>
    <summaryFilterItems>
        <field>Attendance__c.Status__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>