force-app/main/default/objects/Session__c/listViews/Past_Group_Sessions.listView-meta.xml
<ListView>
    <fullName>Past_Group_Sessions</fullName>
    <columns>NAME</columns>
    <columns>SessionDateTime__c</columns>
    <columns>SessionType__c</columns>
    <columns>Status__c</columns>
    <columns>LeadStaffMember1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SessionType__c</field>
        <operation>equals</operation>
        <value>Love4Life Group</value>
    </filters>
    <filters>
        <field>SessionDateTime__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Past Group Sessions</label>
</ListView>