force-app/main/default/objects/Session__c/listViews/Upcoming_121_Sessions.listView-meta.xml
<ListView>
    <fullName>Upcoming_121_Sessions</fullName>
    <columns>NAME</columns>
    <columns>SessionDateTime__c</columns>
    <columns>SessionType__c</columns>
    <columns>Status__c</columns>
    <columns>LeadStaffMember1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SessionType__c</field>
        <operation>equals</operation>
        <value>121</value>
    </filters>
    <filters>
        <field>SessionDateTime__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming 121 Sessions</label>
</ListView>